Body CSS Overflow Fixed

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -4,7 +4,7 @@
   &_principal{
     margin: 0;
     font: $font-title;
-    color: $whitegreen;
+    color: $white;
     &::selection{
       color: $black;
     }
