--- a/src/scss/components/_project.scss
+++ b/src/scss/components/_project.scss
@@ -2,8 +2,8 @@
   &_img_container{
     width: 100%;
     height: 500px;
-    border: 5px solid $whitegreen-dark;
-    background: $whitegreen-dark;
+    border: 5px solid $white-dark;
+    background: $white-dark;
     object-fit: cover;
     position: relative;
     ;
@@ -11,7 +11,7 @@
       content: "";
       width: 100%;
       height: 22px;
-      background-color: $whitegreen-dark;
+      background-color: $white-dark;
       position: absolute;
       top: 0;
       left: 0;
@@ -39,7 +39,7 @@
     height: calc(100% - 22px);
     border: none;
     padding: 15px;
-    color: $whitegreen;
+    color: $white;
     font-size: 2rem;
     opacity: .5;
     position: absolute;
@@ -76,7 +76,7 @@
       transform: scale(.65);
       transition: color .5s, opacity .5s, transform .5s;
       &-current{
-        color: $whitegreen;
+        color: $white;
         opacity: 1;
         transform: scale(1);
       }
