--- a/src/scss/resources/_data.scss
+++ b/src/scss/resources/_data.scss
@@ -1,4 +1,4 @@
-$black: #121413;
+$black: #000000;
 $black-light: #353a37;
 $black-shadow: #353a37d5;
 $lightblue: #2196f3;
@@ -6,11 +6,9 @@ $green-dark: #00460F;
 $green-text: #acfcb6;
 $green-light: #80FF90;
 $green-ultra-light: #67fc7b;
-// $green2-light:#66cc73;
-$green-gradient: #121413,#002408, transparent;
-$whitegreen: #D9FFF5;
-$whitegreen-dark: #c3e6dd;
-$whitegreen-shadow: #d9fff52c;
+$green-gradient: #020202,#002408, transparent;
+$white-dark: #c3e6dd;
+$white-shadow: #d9fff52c;
 $white: #FFFFFF;
 
 $linkedin: #2867B2;
