--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -44,7 +44,7 @@ footer{
     }
   }
   .copyright{
-    color: $whitegreen;
+    color: $white;
     font-size: .7rem;
     text-align: center;
     p{
