--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 50px;
   background-color: $black;
-  box-shadow: 0 -25px 50px #000000;
+  box-shadow: 0 -25px 50px $green-dark;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -33,18 +33,18 @@
     display: flex;
     align-items: center;
     font: $font-highlight;
-    color: $whitegreen;
+    color: $white;
     text-decoration: none;
     position: relative;
     cursor: pointer;
     transition: background-color .3s, color .3s;
     &:hover{
-      background-color: $whitegreen;
+      background-color: $white;
       color: $black;
     }
   }
   .current_page{
-    background-color: $whitegreen;
+    background-color: $white;
     color: $black;
     pointer-events: none;
     &::after{
@@ -87,7 +87,7 @@
       text-decoration: none;
       transition: box-shadow .3s, transform .3s;
       &:hover{
-        box-shadow: 0 0 30px $whitegreen-shadow;
+        box-shadow: 0 0 30px $white-shadow;
         transform: scale(1.1);
       }
     }
@@ -125,7 +125,7 @@
       position: fixed;
       left: 0;
       bottom: 0;
-      box-shadow: 0 25px 50px #000000;
+      box-shadow: 0 25px 50px $green-dark;
       animation: appear_to_bottom .3s ease-out;
     }
     &_button{
