--- a/src/scss/components/_redirect.scss
+++ b/src/scss/components/_redirect.scss
@@ -23,7 +23,7 @@
     margin-bottom: .5em;
     border-radius: 50%;
     box-shadow: 0 0 10px $black-light;
-    background-color: $whitegreen;
+    background-color: $white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,7 +32,7 @@
     text-decoration: none;
     transition: background-color .3s, box-shadow .3s;
     &:hover{
-      background-color: $whitegreen-dark;
+      background-color: $white-dark;
       box-shadow: 0 0 18px rgba(255, 255, 255, 0.5);
     }
   }
@@ -51,7 +51,7 @@
       width: 100%;
       height: 3px;
       border-radius: 2px;
-      background-color: $whitegreen;
+      background-color: $white;
       position: absolute;
       left: 0;
       bottom: -7px;
