Add Skala Ecommerce Project

--- a/src/scss/resources/_data.scss
+++ b/src/scss/resources/_data.scss
@@ -2,11 +2,16 @@ $black: #000000;
 $black-light: #353a37;
 $black-shadow: #353a37d5;
 $lightblue: #2196f3;
+$violet: #833AB4;
+$violet-dark: #662d8b;
 $green-dark: #00460F;
+$green-ultra-dark: #002408;
 $green-text: #acfcb6;
 $green-light: #80FF90;
-$green-ultra-light: #67fc7b;
+$green-ultra-light: #4aff62;
 $green-gradient: #020202,#002408, transparent;
+$gray-dark: #535353;
+$gray: #7c7c7c;
 $white-dark: #c3e6dd;
 $white-shadow: #d9fff52c;
 $white: #FFFFFF;
