--- a/src/scss/components/_portfolio.scss
+++ b/src/scss/components/_portfolio.scss
@@ -2,31 +2,31 @@
   &_img_container{
     width: 100%;
     height: 500px;
-    border: 5px solid $white-dark;
-    background: $white-dark;
+    border: 5px solid $white;
+    background: $white;
     object-fit: cover;
     position: relative;
     ;
     &::after{
       content: "";
       width: 100%;
-      height: 22px;
-      background-color: $white-dark;
+      height: 25px;
+      background-color: $white;
       position: absolute;
       top: 0;
       left: 0;
     }
   }
   &_icon{
-    height: 16px;
+    height: 21px;
     position: absolute;
-    top: 3px;
+    top: 2px;
     left: 2px;
     z-index: 10;
   }
   &_img{
     width: 100%;
-    height: calc(100% - 22px);
+    height: calc(100% - 25px);
     object-fit: cover;
     position: absolute;
     bottom: 0;
@@ -36,13 +36,14 @@
   }
   &_button{
     width: 15%;
-    height: calc(100% - 22px);
+    height: calc(100% - 25px);
     border: none;
     padding: 15px;
     color: $white;
     font-size: 2rem;
     opacity: .5;
     position: absolute;
+    top: 25px;
     z-index: 5;
     cursor: pointer;
     outline: none;
@@ -54,14 +55,12 @@
       @extend .portfolio_button;
       background: linear-gradient(to right, rgba(0, 0, 0, 0.75), transparent);
       text-align: left;
-      top: 22px;
       left: 0;
     }
     &-right{
       @extend .portfolio_button;
       background: linear-gradient(to left, rgba(0, 0, 0, 0.75), transparent);
       text-align: right;
-      top: 22px;
       right: 0;
     }
   }
