--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,8 +6,8 @@
 @import "components/header.scss";
 
 @import "components/logos";
-@import "components/works";
-@import "components/project";
+@import "components/portfolio";
+@import "components/projects";
 @import "components/redirect";
 
 @import "components/footer.scss";
