--- a/src/scss/resources/_global.scss
+++ b/src/scss/resources/_global.scss
@@ -42,9 +42,20 @@ img{
 }
 
 .caption{
+  display: inline-block;
   color: $white;
+  position: relative;
   &::selection{
     color: $black;
+  }
+  &::after{
+    content: "";
+    width: 100%;
+    height: 3px;
+    background-image:linear-gradient(90deg, #FF5722 0%, #FF5722 33%, #2196F3 33%, #2196F3 66%, #F7DF1E 66%, #F7DF1E 100%);
+    position: absolute;
+    bottom: -10px;
+    left: 0;
   }
 }
 
